--- a/pom.xml
+++ b/pom.xml
@@ -63,8 +63,17 @@
             <artifactId>junit</artifactId>
             <scope>test</scope>
         </dependency>
-
-    </dependencies>
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-mail</artifactId>
+			<version>2.7.13</version>
+		</dependency>
+		<dependency>
+			<groupId>org.apache.commons</groupId>
+			<artifactId>commons-lang3</artifactId>
+			<version>3.12.0</version>
+		</dependency>
+	</dependencies>
 
 	<build>
 		<plugins>
