--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -24,3 +24,14 @@ mybatis.configuration.mapUnderscoreToCamelCase=true
 # logger
 #logging.level.com.nowcoder.community=debug
 #logging.file=e://project_work//data//nowcoder//community.log
+
+#MailProperties
+spring.mail.host=smtp.163.com
+spring.mail.port=465
+spring.mail.username=15539354565@163.com
+spring.mail.password=15539354565dan
+spring.mail.protocol=smtps
+spring.mail.properties.mail.smtp.ssl.enable=true
+
+#community
+community.path.domain = http://localhost:8080
